-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 13, 14, 15
-
Component/s: hotspot
-
b11
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8241019 | 14.0.2 | Roman Kennke | P4 | Resolved | Fixed | b01 |
Currently, when emitting IN_NATIVE LRB in C1, we generate a simple runtime call directly in LIR. It'd be more straightforward and maintainable to simply re-use what we do for regular LRB, with the only exception to call into a different runtime endpoint from the stub.
- backported by
-
JDK-8241019 Shenandoah: Consolidate C1 LRB and native barriers
-
- Resolved
-
- duplicates
-
JDK-8239082 Shenandoah: Consolidate C1 LRB and native barriers
-
- Closed
-
- relates to
-
JDK-8226695 Shenandoah: Wire C1 and C2 IN_NATIVE barrier
-
- Resolved
-
-
JDK-8238851 Shenandoah: C1: Resolve into registers of correct type
-
- Closed
-