8239081: Shenandoah: Consolidate C1 LRB and native barriers

Reviewed-by: shade